NetBSD Problem Report #46451

From www@NetBSD.org  Sun May 13 19:54:34 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id C5F9263C785
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 13 May 2012 19:54:33 +0000 (UTC)
Message-Id: <20120513195433.2BE8A63B86B@www.NetBSD.org>
Date: Sun, 13 May 2012 19:54:33 +0000 (UTC)
From: rspmn@arcor.de
Reply-To: rspmn@arcor.de
To: gnats-bugs@NetBSD.org
Subject: eso(4) kernel panic while booting NetBSD 6.0_BETA
X-Send-Pr-Version: www-1.0

>Number:         46451
>Category:       kern
>Synopsis:       eso(4) kernel panic while booting NetBSD 6.0_BETA
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun May 13 19:55:00 +0000 2012
>Closed-Date:    Wed Jun 13 19:27:31 +0000 2012
>Last-Modified:  Wed Jun 13 19:27:31 +0000 2012
>Originator:     Reinhard Speyerer
>Release:        NetBSD 6.0_BETA
>Organization:
>Environment:
NetBSD  6.0_BETA NetBSD 6.0_BETA (GENERIC) i386

>Description:
When trying to boot NetBSD 6.0_BETA on a system which contains a
ESS Solo-1 PCI AudioDrive ES1946 Revision E soundcard the following
kernel panic occurs during boot:
...
eso has not been converted to device_t
eso0 at pci0 dev 10 function 0: ESS Solo-1 PCI AudioDrive ES1946 Revision E
panic: kernel diagnostic assertion "mutex_owned(&sc->sc_intr_lock)" failed: file "/usr/src/sys/dev/pci/eso.c", line 673
fatal breakpoint trap in supervisor mode
...

This kernel panic does not occur with NetBSD 5.1:
...
eso0 at pci0 dev 10 function 0: ESS Solo-1 PCI AudioDrive ES1946 Revision E
eso0: interrupting at irq 5
audio0 at eso0: full duplex, playback, capture, mmap, independent
opl0 at eso0: model OPL3
midi0 at opl0: ESO Yamaha OPL3 (CPU-intensive output)
mpu0 at eso0
midi1 at mpu0: ESO MPU-401 MIDI UART (CPU-intensive output)
joy0 at eso0
joy0: joystick not connected
...

>How-To-Repeat:
Try to boot NetBSD 6.0_BETA on a system which contains a soundcard
handled by eso(4).

>Fix:

>Release-Note:

>Audit-Trail:
From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: kern/46451: eso(4) kernel panic while booting NetBSD 6.0_BETA
Date: Mon, 14 May 2012 07:13:39 +1000

 > eso has not been converted to device_t
 > eso0 at pci0 dev 10 function 0: ESS Solo-1 PCI AudioDrive ES1946 Revision E
 > panic: kernel diagnostic assertion "mutex_owned(&sc->sc_intr_lock)" failed: file "/usr/src/sys/dev/pci/eso.c", line 673
 > fatal breakpoint trap in supervisor mode
 > ...

 this seems obvious.  eso_reset() is called without sc_intr_lock held
 from eso_attach().  eso_attach() is the only caller, so it's probably
 safe to simply remove the KASSERT() from eso_reset().


 .mrg.

From: "matthew green" <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46451 CVS commit: src/sys/dev/pci
Date: Tue, 15 May 2012 18:11:28 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Tue May 15 18:11:28 UTC 2012

 Modified Files:
 	src/sys/dev/pci: eso.c

 Log Message:
 don't kassert that the sc_intr_lock is held in eso_reset().  it's only
 called from attach and doesn't need to have it held, and PR 46451 shows
 that it currently asserts.


 To generate a diff of this commit:
 cvs rdiff -u -r1.59 -r1.60 src/sys/dev/pci/eso.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46451 CVS commit: [netbsd-6] src/sys/dev/pci
Date: Wed, 13 Jun 2012 19:17:43 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Wed Jun 13 19:17:43 UTC 2012

 Modified Files:
 	src/sys/dev/pci [netbsd-6]: eso.c

 Log Message:
 Pull up following revision(s) (requested by mrg in ticket #332):
 	sys/dev/pci/eso.c: revision 1.60
 don't kassert that the sc_intr_lock is held in eso_reset().  it's only
 called from attach and doesn't need to have it held, and PR 46451 shows
 that it currently asserts.


 To generate a diff of this commit:
 cvs rdiff -u -r1.59 -r1.59.4.1 src/sys/dev/pci/eso.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 13 Jun 2012 19:27:31 +0000
State-Changed-Why:
Fixed (if it doesn't work for you, write back)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.