don't kassert that the sc_intr_lock is held in eso_reset().  it's only called from attach and doesn't need to have it held, and PR 46451 shows that it currently asserts.